# load triqs helper to set up tests
find_package(TriqsTest)

add_subdirectory(typed_parser)
add_subdirectory(tools)
add_subdirectory(openmx)
add_subdirectory(respack)
add_subdirectory(pre_preset)
add_subdirectory(pre_wannier)
add_subdirectory(pre_wannier_so)
add_subdirectory(pre_respack)
add_subdirectory(pre_respack_so)
add_subdirectory(alps_cthyb)

add_subdirectory(chain_hubbardI)

#add_subdirectory(main_chain_hubbardI)
#add_subdirectory(main_chain_hubbardI_so)
#add_subdirectory(main_chain_triqsqmc)
#add_subdirectory(main_chain_triqsqmc_so)
#add_subdirectory(main_chain_alpsqmc)
#add_subdirectory(check_chain_hubbardI)
#add_subdirectory(check_chain_hubbardI_so)
#add_subdirectory(check_chain_triqsqmc)
#add_subdirectory(check_chain_triqsqmc_so)
#add_subdirectory(check_chain_alpsqmc)
#add_subdirectory(post_chain_hubbardI)
#add_subdirectory(post_chain_hubbardI_so)
#add_subdirectory(post_chain_triqsqmc)
#add_subdirectory(post_chain_triqsqmc_so)
