function(add_python_test test)
    add_test(NAME ${test} COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${test}.py)
    set_tests_properties(${test} PROPERTIES ENVIRONMENT "PYTHONPATH=${CMAKE_CURRENT_BINARY_DIR}:${CMAKE_BINARY_DIR}/python:${TRIQS_SITE_PACKAGES}:$ENV{PYTHONPATH}")
endfunction()

add_subdirectory(typed_parser)
add_subdirectory(tools)
add_subdirectory(openmx)
add_subdirectory(respack)
add_subdirectory(pre_preset)
add_subdirectory(pre_wannier)
add_subdirectory(pre_wannier_so)
add_subdirectory(pre_respack)
add_subdirectory(pre_respack_so)
add_subdirectory(alps_cthyb)
add_subdirectory(chain_hubbardI_so)
add_subdirectory(chain_hubbardI)
