function(add_python_test test)
    add_test(NAME ${test} COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/${test}.py)
    set_tests_properties(${test} PROPERTIES ENVIRONMENT "PYTHONPATH=${CMAKE_CURRENT_BINARY_DIR}:${CMAKE_BINARY_DIR}/python:${TRIQS_SITE_PACKAGES}:$ENV{PYTHONPATH}")
endfunction()

add_subdirectory(typed_parser)
add_subdirectory(tools)
add_subdirectory(openmx)
add_subdirectory(respack)
add_subdirectory(pre_preset)
add_subdirectory(pre_wannier)
add_subdirectory(pre_wannier_so)
add_subdirectory(pre_respack)
add_subdirectory(pre_respack_so)
add_subdirectory(pre_external)
add_subdirectory(alps_cthyb)
if (TRIQS_VERSION STREQUAL "1.4")
    add_subdirectory(chain_hubbardI_so)
    add_subdirectory(chain_hubbardI)
endif()

if (NOT MPIEXEC)
    set(MPIEXEC "mpirun -np \#")
endif()
message(STATUS "Using ${MPIEXEC} for running MPI-dependent tests")
unset(MPIEXEC CACHE)

option(TEST_DEV "Activate developers' test" OFF)
if(TEST_DEV)
    message(STATUS "Activated developers' test")
    add_subdirectory(bse_chi0)
    add_subdirectory(bse_sparse)
    add_subdirectory(hphi)

    message(AUTHOR_WARNING "Be sure to include 'bse_home/python' in PYTHONPATH or set 'bse_home' by -DBSE_PATH option")
endif()
